<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notizie dal MEF</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">News dal MEF</string>
    <string name="title_activity_main">News dal MEF</string>
    <string name="title_activity_rss_list">RssListActivity</string>
    <string name="title_activity_rsslist">RSSList</string>
    <string name="title_activity_rssdetail">Dettaglio</string>
    <string name="rssDetailTitolo">rssDetailTitolo</string>
    <string name="rssDetailDescrizione">rssDetailDescrizione</string>
    <string name="listRSSTitle">Lista RSS</string>

    <!-- Titoli pagina dettaglio rss -->
    <string name="title_activity_rssdetail_ico1">Comunicati stampa</string>
    <string name="title_activity_rssdetail_ico2">Interviste e Interventi</string>
    <string name="title_activity_rssdetail_ico3">Ultimi documenti</string>
    <string name="title_activity_rssdetail_ico4">Bandi di gara</string>
    <string name="title_activity_rssdetail_ico5">Concorsi 1</string>
    <string name="title_activity_rssdetail_ico6">News</string>
    <string name="title_activity_rssdetail_ico7">Eventi</string>
    <string name="title_activity_rssdetail_ico8">Calendario</string>
    <string name="title_activity_rssdetail_ico9">Programmazione Trimestrale BOT</string>
    <string name="title_activity_rssdetail_ico10">Emissioni CTZ</string>
    <string name="title_activity_rssdetail_ico11">Emissioni BTP</string>
    <string name="title_activity_rssdetail_ico12">Emissioni Medio-Lungo Termine</string>
    <string name="title_activity_rssdetail_ico13">Titoli in Scadenza nei Prossimi 12 mesi</string>
    <string name="title_activity_rssdetail_ico14">News</string>
    <string name="title_activity_rssdetail_ico15">News</string>
    <string name="title_activity_rssdetail_ico16">News</string>
    <string name="title_activity_rssdetail_ico17">Circolari</string>
    <string name="title_activity_rssdetail_ico18">LexNews</string>
    <string name="detailRSSImageShare">Immagine sharing</string>
    <string name="detailRSSImageShareFacebook">Immagine faceboook</string>
    <string name="detailRSSImageShareTwitter">Immagine twitter</string>
    <string name="detailRSSImageShareGplus">Immagine gplus</string>
    <string name="detailRSSImageInternet">Immagine internet</string>

    <!-- Titoli pagina lista rss -->
    <string name="title_activity_rsslist_ico1">Comunicati stampa</string>
    <string name="title_activity_rsslist_ico2">Associata al pulsante 2</string>
    <string name="title_activity_rsslist_ico3">Associata al pulsante 3</string>
    <string name="title_activity_rsslist_ico4">Associata al pulsante 4</string>
    <string name="title_activity_rsslist_ico5">Associata al pulsante 1</string>
    <string name="title_activity_rsslist_ico6">Associata al pulsante 2</string>
    <string name="title_activity_rsslist_ico7">Associata al pulsante 3</string>
    <string name="title_activity_rsslist_ico8">Associata al pulsante 4</string>
    <string name="title_activity_rsslist_ico9">Associata al pulsante 1</string>
    <string name="title_activity_rsslist_ico10">Associata al pulsante 2</string>
    <string name="title_activity_rsslist_ico11">Associata al pulsante 3</string>
    <string name="title_activity_rsslist_ico12">Associata al pulsante 4</string>
    <string name="title_activity_rsslist_ico13">Associata al pulsante 1</string>
    <string name="title_activity_rsslist_ico14">Associata al pulsante 2</string>
    <string name="title_activity_rsslist_ico15">Associata al pulsante 3</string>
    <string name="title_activity_rsslist_ico16">Associata al pulsante 4</string>
    <string name="title_activity_rsslist_ico17">Associata al pulsante 3</string>
    <string name="title_activity_rsslist_ico18">Associata al pulsante 4</string>

    <!-- Bottoni -->
    <string name="homeImageButton1">Titolo icona da cambiare 1</string>
    <string name="homeImageButton2">Titolo icona da cambiare 2</string>
    <string name="homeImageButton3">Titolo icona da cambiare 3</string>
    <string name="homeImageButton4">Titolo icona da cambiare 4</string>
    <string name="homeImageButton5">Titolo icona da cambiare 5</string>
    <string name="homeImageButton6">Titolo icona da cambiare 6</string>
    <string name="homeImageButton7">Titolo icona da cambiare 7</string>
    <string name="homeImageButton8">Titolo icona da cambiare 8</string>
    <string name="homeImageButton9">Titolo icona da cambiare 9</string>
    <string name="homeImageButton10">Titolo icona da cambiare 10</string>
    <string name="homeImageButton11">Titolo icona da cambiare 11</string>
    <string name="homeImageButton12">Titolo icona da cambiare 12</string>
    <string name="homeImageButton13">Titolo icona da cambiare 13</string>
    <string name="homeImageButton14">Titolo icona da cambiare 14</string>
    <string name="homeImageButton15">Titolo icona da cambiare 15</string>
    <string name="homeImageButton16">Titolo icona da cambiare 16</string>
    <string name="homeImageButton17">Titolo icona da cambiare 17</string>
    <string name="homeImageButton18">Titolo icona da cambiare 18</string>
    <string name="homeImageButtonContact">Titolo icona da cambiare</string>
    <string name="homeImageButtonPodcast">Titolo icona da cambiare</string>

    <!-- Activity contattaci -->
    <string name="title_activity_contact">ContactActivity</string>
    <string name="actionBarTitle">Contattaci</string>

    <!-- Activity RSS Detail -->
    <string name="detailRSSTitle">Dettaglio elem RSS</string>
    <string name="title_activity_user_setting">UserSettingActivity</string>
    <string name="title_activity_prefs">PrefsActivity</string>

    <!-- Preference -->
    <string name="pref_user_profile">Profilo utente</string>
    <string name="pref_user_name_summary">informazioni utente</string>
    <string name="pref_user_name">Nome</string>
    <string name="pref_user_language_summary">lingua</string>
    <string name="pref_user_language">Lingua utente</string>
    <string name="pref_update_setting">Aggiornamento</string>
    <string name="pref_send_report_summary">report</string>
    <string name="pref_send_report">invio report</string>
    <string name="pref_sync_frequency_summary">Sincronizzazione</string>
    <string name="pref_sync_frequency">frequenza di sincronizzazione</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh_list">Refresh</string>
    <string name="action_contact">Contattaci</string>
     <string name="action_home">Home</string>
    <string name="action_esci">Esci</string>
    <string name="action_indietro">Indietro</string>
    <string name="menu_settings">menu_settings</string>
    <string name="title_activity_podcast">PodcastActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="condividi_con">Condividi con</string>
    <string name="title_activity_home_dip">HomeDipActivity</string>
    
     <string name="title_home_mef">MEF</string>
     <string name="title_home_dag">DAG</string>
     <string name="title_home_dt">DT</string>
     <string name="title_home_rgs">RGS</string>
     <string name="title_home_intranetdag">Intranet DAG</string>
     <string name="title_home_finanze">FINANZE</string>
    
     <string name="title_home_dip_mef">MEF</string>
     <string name="descrizione_home_dip_mef">Ministero dell\'Economia e delle Finanze</string>
     <string name="title_home_dip_dag">DAG</string>
     <string name="descrizione_home_dip_dag">Dipartimento dell\'Amministrazione Generale, del Personale e dei Servizi</string>
     <string name="title_home_dip_dt">DT</string>
     <string name="descrizione_home_dip_dt">Dipartimento del Tesoro</string>
     <string name="title_home_dip_rgs">RGS</string>
     <string name="descrizione_home_dip_rgs">Ragioneria Generale e dello Stato </string>
     <string name="title_home_dip_intranetdag">Intranet DAG</string>
    <string name="descrizione_home_dip_intranetdag">Dipartimento dell\'Amministrazione Generale, del Personale e dei Servizi</string>
     
    <string name="title_home_dip_finanze">Finanze</string>
    <string name="descrizione_home_dip_finanze">Dipartimento delle Finanze</string>
     

</resources>