<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_home"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     <item
        android:id="@+id/actionContact"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_contact"/>
    <item
        android:id="@+id/action_refresh_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh_list"/>
    <item
        android:id="@+id/action_indietro"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_indietro"/>
    
    <item
        android:id="@+id/action_esci"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_esci"/>
    

</menu>